Code cosmetics